[package]
name = "blocks_lib"
version = "0.3.0"
description = "Gamelogic only library for a simple tetromino based falling blocks game"
edition = "2021"
authors = ["Josh Vanderberg jvanderberg@gmail.com"]
readme = "readme.md"
license = "MIT"
homepage = "https://github.com/jvanderberg/blocks-lib"
repository = "https://github.com/jvanderberg/blocks-lib"
keywords = ["games", "blocks"]
categories = [ "games-and-entertainment"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"


